testsuite/tests/properties/invalid_cast/null_cond.lkt
import common

class ListNode: FooNode {
    @parse_field nb_list: ASTList[NumberNode]

    @exported fun prop(): BarNode = node.parent?.as[BarNode]
}
